# pyperapp

./: .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE.md  Makefile  README.md  requirements.txt  setup.cfg
src/pyperapp/: pyperapp.py  utils.py
src/pyperapp/templates/: README.md
src/pyperapp/templates/create/: index.html  manifest.toml
src/pyperapp/templates/create/js/: README.md  brython.js
src/pyperapp/templates/create/py/: app.py  core.py
src/pyperapp/templates/create/stack/goodbye/: code.py
src/pyperapp/templates/create/stack/hello/: code.py
utils/: translate.py
