[metadata]
name = pyperapp
version = 0.0.1
author = Nicholas H.Tollervey
author_email = ntoll@ntoll.org
description = Simple HyperCard style apps using Python in the browser.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/ntoll/pyperapp
project_urls =
    Bug Tracker = https://github.com/ntoll/pyperapp/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Education
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: User Interfaces

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    pypr = pyperapp.pyperapp:pypr
